# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-cli"
version = "1.0.2"
authors = [
  { name="Kim Minseo", email="kimms010625@gmail.com" },
]
description = "A CLI tool to monitor the status of lab equipment."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
]

dependencies = [
    "typer",
    "rich",
    "numpy",
    "pandas",
    "matplotlib",
    "openpyxl",
    "requests",
    "toptica-lasersdk"
]

[project.scripts]
lab-cli = "lab_cli.main:app"

[tool.setuptools]
# packages = ["lab_cli"]  <-- DELETE THIS LINE

[tool.setuptools.packages.find]
where = ["."]
include = ["lab_cli*"]
exclude = ["Data_Sweeps", "Data_*"]
